// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: DateTimeModal ui with value: Component: DateTimeModal => ui => with value 1`] = `
<OpenCloseModal
  className="date-time-modal"
  isOpen={true}
  onClose={[MockFunction]}
  onSave={[Function]}
  size="sm"
  stickyFooter={false}
  text={
    Object {
      "save": "Select",
    }
  }
>
  <n
    className=""
    closeOnClickOutside={true}
    closeOnSelect={false}
    closeOnTab={true}
    dateFormat="YYYY-MM-DD"
    input={false}
    inputProps={Object {}}
    isValidDate={[Function]}
    onBeforeNavigate={[Function]}
    onCalendarClose={[Function]}
    onCalendarOpen={[Function]}
    onChange={[Function]}
    onClose={[Function]}
    onNavigate={[Function]}
    onNavigateBack={[Function]}
    onNavigateForward={[Function]}
    onOpen={[Function]}
    open={true}
    strictParsing={true}
    timeConstraints={Object {}}
    timeFormat="HH:II:SS"
    utc={true}
    value={"2020-01-31T23:00:00.000Z"}
  />
</OpenCloseModal>
`;

exports[`Component: DateTimeModal ui without value: Component: DateTimeModal => ui => without value 1`] = `
<OpenCloseModal
  className="date-time-modal"
  isOpen={true}
  onClose={[MockFunction]}
  onSave={[Function]}
  size="sm"
  stickyFooter={false}
  text={
    Object {
      "save": "Select",
    }
  }
>
  <n
    className=""
    closeOnClickOutside={true}
    closeOnSelect={false}
    closeOnTab={true}
    dateFormat="YYYY-MM-DD"
    input={false}
    inputProps={Object {}}
    isValidDate={[Function]}
    onBeforeNavigate={[Function]}
    onCalendarClose={[Function]}
    onCalendarOpen={[Function]}
    onChange={[Function]}
    onClose={[Function]}
    onNavigate={[Function]}
    onNavigateBack={[Function]}
    onNavigateForward={[Function]}
    onOpen={[Function]}
    open={true}
    strictParsing={true}
    timeConstraints={Object {}}
    timeFormat="HH:II:SS"
    utc={true}
    value=""
  />
</OpenCloseModal>
`;
